editar un contenido simple